Реализовано преобразование изображения в черно-белый формат

--- a/NeuralNetworks/NeuralNetworks.csproj
+++ b/NeuralNetworks/NeuralNetworks.csproj
@@ -40,7 +40,11 @@
     <Compile Include="Layer.cs" />
     <Compile Include="Neuron.cs" />
     <Compile Include="NeuroneType.cs" />
+    <Compile Include="PictureConverter.cs" />
     <Compile Include="Topology.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System.Drawing" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
