--- a/NeuralNetworksTests/NeuralNetworksTests.csproj
+++ b/NeuralNetworksTests/NeuralNetworksTests.csproj
@@ -52,13 +52,23 @@
   </Choose>
   <ItemGroup>
     <Compile Include="NeuralNetworkTests.cs" />
+    <Compile Include="PictureConverterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\KanilsNetworks\NeuralNetworks.csproj">
+    <ProjectReference Include="..\NeuralNetworks\NeuralNetworks.csproj">
       <Project>{3FADB484-9E68-4563-8C32-F2E271E868F2}</Project>
       <Name>NeuralNetworks</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="heart.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="images\Uninfected.png" />
+    <Content Include="images\Parasitized.png" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
