--- a/NeuralNetworksTests/NeuralNetworksTests.csproj
+++ b/NeuralNetworksTests/NeuralNetworksTests.csproj
@@ -67,8 +67,12 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="images\Uninfected.png" />
-    <Content Include="images\Parasitized.png" />
+    <Content Include="images\Uninfected.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="images\Parasitized.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
